--- a/_includes/sponsor-bar.html
+++ b/_includes/sponsor-bar.html
@@ -2,7 +2,7 @@
   <h2 class="max-length gutter">Our Sponsors</h2>
   <p class="max-length gutter">The Hub, Rebound, and all of the rest of our services would not be possible without the generous support from our sponsors:</p>
   <div class="grid grid-h-center grid-stretch island-1-2 wrapper">
-    {% for sponsor in site.data.sponsor-list %}
+    {% for sponsor in site.data.sponsor-list.sponsors %}
       <div class="unit [ xs-1-2 m-1-3 ] island-1-2 unit-content-distribute">
         <div class="logo-wrap gutter push content-fill unit-content-center-vertical">
           <img class="img-flex" src="{{site.baseurl}}/images/sponsors/{{sponsor.logo}}" alt="{{sponsor-logoAlt}}">
