--- a/_layouts/news-article.html
+++ b/_layouts/news-article.html
@@ -19,6 +19,7 @@ layout: main
     {{content}}
   </div>
 </div>
-<section id="news-preview" class="news-preview pad-t-b-2 bg-lg" tabindex="0">
+<div id="news-preview" class="anchor"></div>
+<section class="news-preview pad-t-b-2 bg-lg" tabindex="0">
   {% include news-events-prev.html %}
 </section>
