--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,7 +13,7 @@
 </head>
 <body class="{{page.pageClass}}">
   <ul class="skip-links">
-    <li><a href="#content-start">Jump to main content</a></li>
+    <li><a href="#main">Jump to main content</a></li>
     <li><a class="skip-to-nav" href="#nav">Jump to navigation</a></li>
   </ul>
   {{content}}
