--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -20,19 +20,7 @@
 
 html {
   font-family: var(--font-primary);
-  /* overflow: hidden; */
 }
-/*
-body {
-  transition: margin .4s;
-  /* overflow-x: hidden; */
-  /* overflow-y: scroll;
-} */
-
-/* body.sticky {
-  margin-top: 3.590625rem;
-  height: calc(100vh - 3.590625rem);
-} */
 
 h1, h2, h3, h4, h5, h6, .font-alt {
   font-family: var(--font-secondary);
@@ -68,7 +56,7 @@ p a:hover,
 p a:focus,
 .hyperlink:hover,
 .hyperlink:focus {
-  color: var(--color-primary-dark);
+  color: var(--color-primary-light);
 }
 
 hr {
@@ -162,7 +150,7 @@ input.dollar-input {
 }
 
 .bg-secondary.slide-unit a:not(.btn):hover {
-  color: var(--color-primary);
+  color: var(--color-primary-light);
 }
 
 .bg-fff {
