--- a/_includes/css/modules.css
+++ b/_includes/css/modules.css
@@ -1064,8 +1064,8 @@ button:focus,
 button:hover,
 .btn:focus,
 .btn:hover {
-  background-color: var(--color-primary-dark);
-  border-color: var(--color-primary-dark);
+  background-color: var(--color-primary-light);
+  border-color: var(--color-primary-light);
   color: #fff;
 }
 
