--- a/_includes/css/about.css
+++ b/_includes/css/about.css
@@ -20,6 +20,8 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+  position: relative;
+  z-index: 1;
 }
 
 @media only screen and (min-width: 38em) {
