--- a/_includes/news-events-prev.html
+++ b/_includes/news-events-prev.html
@@ -1,4 +1,4 @@
-<div class="wrapper">
+<div class="wrapper news-events-prev">
   <div class="grid grid-middle">
     <div class="unit [ xs-1 m-1-2 ]">
       <h2 class="gutter push-0">News & Events</h2>
@@ -19,8 +19,7 @@
       <li class="unit [ xs-1 m-1-2 ]">
         <a href="{{site.baseurl}}/{{news.url}}" class="grid grid-stretch bg-lg-lighter-hov">
           <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2">
-            <div class="embed embed-1by1">
-              <img class="embed-item" src="{{site.baseurl}}/images/news/{{news.prevImage}}" alt="">
+            <div class="embed embed-1by1" style="background-image: url('{{site.baseurl}}{{news.banImage}}')">
             </div>
           </div>
           <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
@@ -35,8 +34,7 @@
       <li class="unit [ xs-1 m-1-2 ]">
         <a href="{{site.baseurl}}/{{news.url}}" class="grid grid-stretch bg-lg-lighter-hov">
           <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2">
-            <div class="embed embed-1by1">
-              <img class="embed-item" src="{{site.baseurl}}/images/news/{{news.prevImage}}" alt="">
+            <div class="embed embed-1by1" style="background-image: url('{{site.baseurl}}{{news.banImage}}')">
             </div>
           </div>
           <div class="unit [ xs-1 s-1-2 m-1 l-1-2 ] island-1-2 unit-content-distribute">
