Fix blog boolean error

--- a/_includes/css/news-events.css
+++ b/_includes/css/news-events.css
@@ -16,6 +16,15 @@
   display: none;
 } */
 
+.categories-wrap.cat-news .divider,
+.categories-wrap.cat-events .divider {
+  display: none;
+}
+
+.categories-wrap.cat-events.cat-news .divider {
+  display: block;
+}
+
 .categories-wrap.cat-all .no-articles,
 .categories-wrap.cat-news .no-articles,
 .categories-wrap.cat-events .no-articles {
