Fix banner generation error

--- a/_layouts/news-article.html
+++ b/_layouts/news-article.html
@@ -1,7 +1,7 @@
 ---
 layout: main
 ---
-{% if page.banner == true %}
+{% if page.banner == 'true' %}
 <header class="hero hero-news push-2" style="background-image: url('{{site.baseurl}}{{page.banImage}}')">
   <div class="hero-overlay"></div>
   <div class="wrapper gutter">
