Add brand selection

--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -18,6 +18,11 @@
   --shadow-primary: 0 3px 6px rgba(0, 0, 0, .15);
 }
 
+::selection {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
 html {
   font-family: var(--font-primary);
 }
