Add brand change updates

--- a/_includes/css/common.css
+++ b/_includes/css/common.css
@@ -2,9 +2,6 @@
   --color-primary: #8f102d;
   --color-primary-light: #bd153b;
   --color-primary-dark: #55091b;
-  /* --color-primary: #68bf9b;
-  --color-primary-light: #8ae0bd;
-  --color-primary-dark: #52997c; */
   --color-secondary: #333;
   --color-secondary-dark: #000;
   --color-accent: #8fcc3a;
@@ -256,22 +253,41 @@ input.dollar-input {
 
 .to-top {
   display: none;
-  transform: rotate(-90deg);
   background-color: rgba(143, 16, 45, .7);
   color: #fff;
   position: fixed;
-  bottom: 0;
+  bottom: -4rem;
   right: 2rem;
-  opacity: 0;
   z-index: 10000;
   transition:
+    bottom var(--transition-primary),
     background-color var(--transition-primary),
     opacity var(--transition-primary);
-  border-radius: 0 7.5px 7.5px 0;
+  border-radius: 7.5px 7.5px 0 0;
+}
+
+.to-top i {
+  transform: rotate(-90deg);
+}
+
+.to-top span {
+  position: absolute;
+  top: -2rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100%;
+  color: var(--color-primary);
+  text-align: center;
+  opacity: 0;
+  transition: opacity var(--transition-primary);
+}
+
+.to-top:hover span {
+  opacity: 1;
 }
 
 .to-top.visible {
-  opacity: 1;
+  bottom: 0;
 }
 
 .to-top:hover,
@@ -288,15 +304,6 @@ input.dollar-input {
 
 @media only screen and (min-width: 38em) {
 
-  /* body.sticky {
-    margin-top: 4.1619318182rem;
-    height: calc(100vh - 4.1619318182rem);
-  }
-
-  body.sticky.sticky-extend {
-    margin-top: 7.6243181818rem;
-    height: calc(100vh - 7.6243181818rem);
-  } */
 
   /* ---------- Main > Header ---------- */
 
@@ -323,16 +330,6 @@ input.dollar-input {
 }
 
 @media only screen and (min-width: 60em) {
-
-  /* body.sticky {
-    margin-top: 4.375rem;
-    height: calc(100vh - 4.375rem);
-  }
-
-  body.sticky.extended {
-    margin-top: 8.1rem;
-    height: calc(100vh - 8.1rem);
-  } */
 
   /* ---------- Main > Header ---------- */
 
