--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -30,10 +30,11 @@ layout: default
     {% if pages.sponsorBar == true %}
       {% include sponsor-bar.html sponsorClass='hidden' %}
     {% endif %}
-    <a class="to-top visible island-1-2" href="#main">
+    <a class="to-top visible gutter-1-2 pad-t-1-4 pad-b-1-4" href="#main">
       <i class="icon i-1-1-2">
         <svg><use xlink:href="{{site.baseurl}}/images/icons.svg#right-indicator" /></svg>
       </i>
+      <span class="island-1-4">To top</span>
     </a>
 </main>
 <footer class="footer pad-t" role="contentinfo">
